test/errors/str_init.sl
# strings do not require initialization
# they are automatically initialized to empty
str a;
